argo/teams-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teams-ui
  namespace: teams-ui
  labels:
    app: teams-ui
    component: frontend
  annotations:
    commit-sha: 8b514a1cb354
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teams-ui
  template:
    metadata:
      labels:
        app: teams-ui
        component: frontend
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: teams-ui
        image: teams-ui:local      
#        image: olivercodes01/teams-app:0.0.7
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
