argo/teams-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teams-ui-ingress
  namespace: teams-ui
spec:
  ingressClassName: nginx
  rules:
#  - host: platform-auth.127.0.0.1.sslip.io
  - host: teams-ui.fd60-627a-a42b-42d3-861a-6987-3179-4d87.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teams-ui-service
            port:
              number: 80
